@@ -13,7 +13,7 @@
 # Copyright (c) 2000 by Ajuba Solutions
 # All rights reserved.
 # 
-# RCS: @(#) $Id: tcltest.tcl,v 1.37 2002/03/24 18:57:53 dgp Exp $
+# RCS: @(#) $Id: tcltest.tcl,v 1.38 2002/03/25 17:10:57 dgp Exp $
 
 # create the "tcltest" namespace for all testing variables and procedures
 
@@ -3453,9 +3453,6 @@ proc tcltest::threadReap {} {
 
 # Initialize the constraints and set up command line arguments 
 namespace eval tcltest {
-    # Ensure that we have a minimal auto_path so we don't pick up extra junk.
-    set ::auto_path [list [info library]]
-
     tcltest::initConstraints
     if {[namespace children [namespace current]] == {}} {
 	tcltest::processCmdLineArgs
